
syntax = "proto3";

package lemming.dataplane.sai;

import "dataplane/proto/sai/common.proto";

option go_package = "github.com/openconfig/lemming/dataplane/proto/sai";

enum NextHopGroupAttr {
  NEXT_HOP_GROUP_ATTR_UNSPECIFIED = 0;
  NEXT_HOP_GROUP_ATTR_NEXT_HOP_COUNT = 1;
  NEXT_HOP_GROUP_ATTR_NEXT_HOP_MEMBER_LIST = 2;
  NEXT_HOP_GROUP_ATTR_TYPE = 3;
  NEXT_HOP_GROUP_ATTR_SET_SWITCHOVER = 4;
  NEXT_HOP_GROUP_ATTR_COUNTER_ID = 5;
  NEXT_HOP_GROUP_ATTR_CONFIGURED_SIZE = 6;
  NEXT_HOP_GROUP_ATTR_REAL_SIZE = 7;
  NEXT_HOP_GROUP_ATTR_SELECTION_MAP = 8;
  NEXT_HOP_GROUP_ATTR_HIERARCHICAL_NEXTHOP = 9;
  NEXT_HOP_GROUP_ATTR_ARS_OBJECT_ID = 10;
  NEXT_HOP_GROUP_ATTR_ARS_PACKET_DROPS = 11;
  NEXT_HOP_GROUP_ATTR_ARS_NEXT_HOP_REASSIGNMENTS = 12;
  NEXT_HOP_GROUP_ATTR_ARS_PORT_REASSIGNMENTS = 13;
  NEXT_HOP_GROUP_ATTR_NEXT_HOP_LIST = 14;
  NEXT_HOP_GROUP_ATTR_NEXT_HOP_MEMBER_WEIGHT_LIST = 15;
  NEXT_HOP_GROUP_ATTR_NEXT_HOP_MEMBER_COUNTER_LIST = 16;
}

enum NextHopGroupMemberAttr {
  NEXT_HOP_GROUP_MEMBER_ATTR_UNSPECIFIED = 0;
  NEXT_HOP_GROUP_MEMBER_ATTR_NEXT_HOP_GROUP_ID = 1;
  NEXT_HOP_GROUP_MEMBER_ATTR_NEXT_HOP_ID = 2;
  NEXT_HOP_GROUP_MEMBER_ATTR_WEIGHT = 3;
  NEXT_HOP_GROUP_MEMBER_ATTR_CONFIGURED_ROLE = 4;
  NEXT_HOP_GROUP_MEMBER_ATTR_OBSERVED_ROLE = 5;
  NEXT_HOP_GROUP_MEMBER_ATTR_MONITORED_OBJECT = 6;
  NEXT_HOP_GROUP_MEMBER_ATTR_INDEX = 7;
  NEXT_HOP_GROUP_MEMBER_ATTR_SEQUENCE_ID = 8;
  NEXT_HOP_GROUP_MEMBER_ATTR_COUNTER_ID = 9;
  NEXT_HOP_GROUP_MEMBER_ATTR_ARS_ALTERNATE_PATH = 10;
}

enum NextHopGroupMapAttr {
  NEXT_HOP_GROUP_MAP_ATTR_UNSPECIFIED = 0;
  NEXT_HOP_GROUP_MAP_ATTR_TYPE = 1;
  NEXT_HOP_GROUP_MAP_ATTR_MAP_TO_VALUE_LIST = 2;
}

message CreateNextHopGroupRequest {
  option (sai_type) = OBJECT_TYPE_NEXT_HOP_GROUP;
  uint64 switch = 1;
  optional NextHopGroupType type = 2 [(attr_enum_value) = 3];
  optional bool set_switchover = 3 [(attr_enum_value) = 4];
  optional uint64 counter_id = 4 [(attr_enum_value) = 5];
  optional uint32 configured_size = 5 [(attr_enum_value) = 6];
  optional uint64 selection_map = 6 [(attr_enum_value) = 8];
  optional bool hierarchical_nexthop = 7 [(attr_enum_value) = 9];
  optional uint64 ars_object_id = 8 [(attr_enum_value) = 10];
  repeated uint64 next_hop_list = 9 [(attr_enum_value) = 14];
  repeated uint32 next_hop_member_weight_list = 10 [(attr_enum_value) = 15];
  repeated uint64 next_hop_member_counter_list = 11 [(attr_enum_value) = 16];
}

message CreateNextHopGroupResponse {
  uint64 oid = 1;
}

message RemoveNextHopGroupRequest {
  uint64 oid = 1;
}

message RemoveNextHopGroupResponse {}

message SetNextHopGroupAttributeRequest {
  uint64 oid = 1;
  optional bool set_switchover = 2 [(attr_enum_value) = 4];
  optional uint64 counter_id = 3 [(attr_enum_value) = 5];
  optional uint64 selection_map = 4 [(attr_enum_value) = 8];
  optional uint64 ars_object_id = 5 [(attr_enum_value) = 10];
  repeated uint64 next_hop_list = 6 [(attr_enum_value) = 14];
  repeated uint32 next_hop_member_weight_list = 7 [(attr_enum_value) = 15];
  repeated uint64 next_hop_member_counter_list = 8 [(attr_enum_value) = 16];
}

message SetNextHopGroupAttributeResponse {}

message GetNextHopGroupAttributeRequest {
  uint64 oid = 1;
  repeated NextHopGroupAttr attr_type = 2;
}

message GetNextHopGroupAttributeResponse {
  NextHopGroupAttribute attr = 1;
}

message CreateNextHopGroupMemberRequest {
  option (sai_type) = OBJECT_TYPE_NEXT_HOP_GROUP_MEMBER;
  uint64 switch = 1;
  optional uint64 next_hop_group_id = 2 [(attr_enum_value) = 1];
  optional uint64 next_hop_id = 3 [(attr_enum_value) = 2];
  optional uint32 weight = 4 [(attr_enum_value) = 3];
  optional NextHopGroupMemberConfiguredRole configured_role = 5
      [(attr_enum_value) = 4];
  optional uint64 monitored_object = 6 [(attr_enum_value) = 6];
  optional uint32 index = 7 [(attr_enum_value) = 7];
  optional uint32 sequence_id = 8 [(attr_enum_value) = 8];
  optional uint64 counter_id = 9 [(attr_enum_value) = 9];
  optional bool ars_alternate_path = 10 [(attr_enum_value) = 10];
}

message CreateNextHopGroupMemberResponse {
  uint64 oid = 1;
}

message RemoveNextHopGroupMemberRequest {
  uint64 oid = 1;
}

message RemoveNextHopGroupMemberResponse {}

message SetNextHopGroupMemberAttributeRequest {
  uint64 oid = 1;
  optional uint64 next_hop_id = 2 [(attr_enum_value) = 2];
  optional uint32 weight = 3 [(attr_enum_value) = 3];
  optional uint64 monitored_object = 4 [(attr_enum_value) = 6];
  optional uint32 sequence_id = 5 [(attr_enum_value) = 8];
  optional uint64 counter_id = 6 [(attr_enum_value) = 9];
  optional bool ars_alternate_path = 7 [(attr_enum_value) = 10];
}

message SetNextHopGroupMemberAttributeResponse {}

message GetNextHopGroupMemberAttributeRequest {
  uint64 oid = 1;
  repeated NextHopGroupMemberAttr attr_type = 2;
}

message GetNextHopGroupMemberAttributeResponse {
  NextHopGroupMemberAttribute attr = 1;
}

message CreateNextHopGroupMembersRequest {
  repeated CreateNextHopGroupMemberRequest reqs = 1;
}

message CreateNextHopGroupMembersResponse {
  repeated CreateNextHopGroupMemberResponse resps = 1;
}

message RemoveNextHopGroupMembersRequest {
  repeated RemoveNextHopGroupMemberRequest reqs = 1;
}

message RemoveNextHopGroupMembersResponse {
  repeated RemoveNextHopGroupMemberResponse resps = 1;
}

message CreateNextHopGroupMapRequest {
  option (sai_type) = OBJECT_TYPE_NEXT_HOP_GROUP_MAP;
  uint64 switch = 1;
  optional NextHopGroupMapType type = 2 [(attr_enum_value) = 1];
  repeated UintMap map_to_value_list = 3 [(attr_enum_value) = 2];
}

message CreateNextHopGroupMapResponse {
  uint64 oid = 1;
}

message RemoveNextHopGroupMapRequest {
  uint64 oid = 1;
}

message RemoveNextHopGroupMapResponse {}

message SetNextHopGroupMapAttributeRequest {
  uint64 oid = 1;
  repeated UintMap map_to_value_list = 2 [(attr_enum_value) = 2];
}

message SetNextHopGroupMapAttributeResponse {}

message GetNextHopGroupMapAttributeRequest {
  uint64 oid = 1;
  repeated NextHopGroupMapAttr attr_type = 2;
}

message GetNextHopGroupMapAttributeResponse {
  NextHopGroupMapAttribute attr = 1;
}

message CreateNextHopGroupsRequest {
  repeated CreateNextHopGroupRequest reqs = 1;
}

message CreateNextHopGroupsResponse {
  repeated CreateNextHopGroupResponse resps = 1;
}

message RemoveNextHopGroupsRequest {
  repeated RemoveNextHopGroupRequest reqs = 1;
}

message RemoveNextHopGroupsResponse {
  repeated RemoveNextHopGroupResponse resps = 1;
}

service NextHopGroup {
  rpc CreateNextHopGroup(CreateNextHopGroupRequest)
      returns (CreateNextHopGroupResponse) {}
  rpc RemoveNextHopGroup(RemoveNextHopGroupRequest)
      returns (RemoveNextHopGroupResponse) {}
  rpc SetNextHopGroupAttribute(SetNextHopGroupAttributeRequest)
      returns (SetNextHopGroupAttributeResponse) {}
  rpc GetNextHopGroupAttribute(GetNextHopGroupAttributeRequest)
      returns (GetNextHopGroupAttributeResponse) {}
  rpc CreateNextHopGroupMember(CreateNextHopGroupMemberRequest)
      returns (CreateNextHopGroupMemberResponse) {}
  rpc RemoveNextHopGroupMember(RemoveNextHopGroupMemberRequest)
      returns (RemoveNextHopGroupMemberResponse) {}
  rpc SetNextHopGroupMemberAttribute(SetNextHopGroupMemberAttributeRequest)
      returns (SetNextHopGroupMemberAttributeResponse) {}
  rpc GetNextHopGroupMemberAttribute(GetNextHopGroupMemberAttributeRequest)
      returns (GetNextHopGroupMemberAttributeResponse) {}
  rpc CreateNextHopGroupMembers(CreateNextHopGroupMembersRequest)
      returns (CreateNextHopGroupMembersResponse) {}
  rpc RemoveNextHopGroupMembers(RemoveNextHopGroupMembersRequest)
      returns (RemoveNextHopGroupMembersResponse) {}
  rpc CreateNextHopGroupMap(CreateNextHopGroupMapRequest)
      returns (CreateNextHopGroupMapResponse) {}
  rpc RemoveNextHopGroupMap(RemoveNextHopGroupMapRequest)
      returns (RemoveNextHopGroupMapResponse) {}
  rpc SetNextHopGroupMapAttribute(SetNextHopGroupMapAttributeRequest)
      returns (SetNextHopGroupMapAttributeResponse) {}
  rpc GetNextHopGroupMapAttribute(GetNextHopGroupMapAttributeRequest)
      returns (GetNextHopGroupMapAttributeResponse) {}
  rpc CreateNextHopGroups(CreateNextHopGroupsRequest)
      returns (CreateNextHopGroupsResponse) {}
  rpc RemoveNextHopGroups(RemoveNextHopGroupsRequest)
      returns (RemoveNextHopGroupsResponse) {}
}
